--- a/style.css
+++ b/style.css
@@ -2,9 +2,28 @@ body {
     padding: 100px;
 }
 
-.signin-area {
+.submit-area {
     margin-top: 50px;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 5px 5px 10px gray;
+}
+
+.status {
+    margin: 0 20px;
+    padding: 20px;
+    color: #fff;
+    border-radius: 10px;
+}
+
+.deposit {
+    background-color: slateblue;
+}
+
+.withdraw {
+    background-color: lightsalmon;
+}
+
+.balance {
+    background-color: orange;
 }
